# msfs-2020-gps-link

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  tauri.conf.json
.github/workflows/: ci.yaml  security-audit.yml
instructions/: COM.md
msfs-2020-gps-link/: .prettierrc.js  config-overrides.js  package.json
msfs-2020-gps-link/public/: index.html
msfs-2020-gps-link/src/: index.tsx
msfs-2020-gps-link/src-tauri/: Cargo.toml  tauri.conf.json
msfs-2020-gps-link/src-tauri/src/: cmd.rs  main.rs
msfs-2020-gps-link/src-tauri/src/system/: broadcaster_actor.rs  coordinator_actor.rs  landing_detection_actor.rs  messages.rs  mod.rs  simconnect_actor.rs
msfs-2020-gps-link/src/components/: App.test.tsx  App.tsx  ConnectForm.tsx
msfs-2020-gps-link/src/hooks/: useStyles.ts
simconnect-client/: Cargo.toml  SimConnect.h  build.rs  wrapper.h
simconnect-client/src/: bindings.rs  helpers.rs  lib.rs
src/: cmd.rs  main.rs
src/broadcaster/: com.rs  config.rs  ext.rs  mod.rs  udp.rs
src/system/: broadcaster_actor.rs  coordinator_actor.rs  landing_detection_actor.rs  messages.rs  mod.rs  simconnect_actor.rs  simconnect_objects.rs
www/: package.json
www/src/: index.tsx
www/src/components/: App.test.tsx  App.tsx  ConnectForm.tsx  ConnectFormBroadcast.tsx  ConnectFormRefreshRate.tsx  ConnectFormStatus.tsx  IPAddressTextMask.tsx  Status.tsx  Version.tsx
