[package]
name = "MSFS-2020-GPS-Link"
version = "0.2.3"
authors = [ "Mihai Dinculescu <mihai.dinculescu@outlook.com>" ]
edition = "2021"
description = "MSFS 2020 GPS Link"
license = "MIT"
default-run = "msfs-2020-gps-link"
build = "src/build.rs"

[[bin]]
name = "msfs-2020-gps-link"
path = "src/main.rs"

[dependencies]
tauri = {version = "1.0.0-beta.8", features = ["api-all"] }
actix = "0.12"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tokio = { version = "1.5", features = [ "full" ] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
tracing-log = "0.1"
tracing-opentelemetry = "0.16"
opentelemetry-jaeger = { version = "0.15" }
simconnect-client = { path = "../../simconnect-client" }

[build-dependencies]
tauri-build = "1.0.0-beta.4"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
default = [ "custom-protocol" ]
